--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -1,15 +1,26 @@
 .main-container {
-    display: flex;
-    /*flex-direction: column;
-    align-items: center; /* Центрируем элементы по горизонтали */
-    justify-content: center; /* Центрируем элементы по вертикали */
-   /* min-height: 100vh; /* Занимаем всю высоту экрана */
-  }
-  
-  .main-image {
-    width: 100%; /* Ширина изображения 100% контейнера */
-    max-width: 400px; /* Максимальная ширина изображения */
-    height: auto; /* Автоматическая высота для сохранения пропорций */
-    border-radius: 10px; /* Закругление углов */
-  }
-  
+  display: flex;
+  flex-direction: column; /* Вертикальное расположение для заголовка и изображений */
+  align-items: center; /* Центрируем элементы по горизонтали */
+  justify-content: flex-start; /* Выравнивание по верхней части */
+  min-height: 100vh; /* Занимаем всю высоту экрана */
+}
+
+.welcome-title {
+  font-size: 3rem; /* Увеличьте размер шрифта заголовка */
+  margin-bottom: 20px; /* Отступ снизу для пространства между заголовком и изображениями */
+}
+
+.images-container {
+  display: flex; /* Используйте flex для изображений */
+  justify-content: center; /* Центрируем изображения */
+  flex-wrap: nowrap; /* Изображения не будут обтекать */
+  overflow-x: auto; /* Добавьте прокрутку, если изображения не помещаются */
+}
+
+.main-image {
+  width: 250px; /* Увеличьте ширину изображения */
+  height: auto; /* Автоматическая высота для сохранения пропорций */
+  border-radius: 10px; /* Закругление углов */
+  margin: 10px; /* Отступ между изображениями */
+}
